Improving info tab, adding help text and fixing problems.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -549,3 +549,11 @@ input[title="Source Node"], input[title="Source Relation"] {
 .infoForm {
   padding-top: 10px;
 }
+
+@media print
+{    
+    .help-block
+    {
+        display: none !important;
+    }
+}
