Language in instance_info revised plus a bug fix.
Language in instance_info is now a drop-down filled with language codes
(ISO639-1). Fixed a bug that
allowed adding multiple elements when there should be only one (e.g.
language, constant). Changed timeout for view mode from 10 secs
to 20.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -646,5 +646,16 @@ input[title="Source Node"], input[title="Source Relation"] {
         display: none !important;
     }
 }
+/*
+Mimic cursor style from native .dropdown-menu > .disabled > a{} styles,
+since `pointer-events: none` kills the cursor state, too. 
+*/
+.dropdown-menu > .disabled{
+ cursor: not-allowed; 
+}
 
+/* The real magic ;) */
+.dropdown-menu > .disabled > a{
+ pointer-events: none;
+}
 
