Breaking long target paths gracefully (when there is additional)

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -659,3 +659,7 @@ since `pointer-events: none` kills the cursor state, too.
  pointer-events: none;
 }
 
+.targetPath { 
+    word-break: break-all;
+     overflow: hidden;     
+}
