--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -39,7 +39,7 @@
 }
 
 .nav-tabs>li.active a{
-    background-color: #f5f5f5;
+    background-color: white;
 }
 
 .popover-title {
@@ -745,4 +745,11 @@ button[title="Add Argument"][data-xpath*="/instance_generator"] {
 .mappings>fieldset, #generatorsTab>fieldset {
     padding-left:5px !important;
     padding-right:5px !important;
+}
+.well {
+    background-color: white;
+}
+.help-block, #configuration p, #config p, #transformation p {
+    background-color: #F5F5F5;
+    font-style: italic;
 }
