--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -765,7 +765,7 @@ button[title="Add Argument"][data-xpath*="/instance_generator"] {
     background-color: #F5F5F5;
     font-style: italic;
 }
-.actionsToolbar img {
+.actionsToolbar img, #collapseExpandAll-btn .glyphicon{
     margin-left: 5px !important;
     margin-top: 2px !important;
 }
