Added toolbar in info tab and removed stray buttons. Changed icon for collapse/expand map and improved

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -769,3 +769,7 @@ button[title="Add Argument"][data-xpath*="/instance_generator"] {
     margin-left: 5px !important;
     margin-top: 2px !important;
 }
+#infoWell {
+    margin-top: 5px;
+    padding: 5px;
+}
