--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -824,3 +824,24 @@ thead.selected+tbody>tr.empty {
 .mCS_y_hidden>.mCSB_container{
      padding-right: 0px !important;
 }
+
+/* Context menu styles*/
+ /* menu header via data attribute */
+    .data-title:before {
+        content: attr(data-menutitle);
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        background: #DDD;
+        padding: 2px;
+
+        font-family: Verdana, Arial, Helvetica, sans-serif;
+        font-size: 11px;
+        font-weight: bold;
+    }
+    .data-title :first-child {
+        margin-top: 20px;
+    }
+    
