Various improvements concerning Target Templates and Transformation Tab
Target column is not reinitialized when deleting a template. Updated x3ml engine to 1.9.2-SNAPSHOT to support target templates. Transformation tab improvements: Linkify.js is only used when it's meaningful (subjects links and Turtle). Text selection works also for Firefox now (had a bug). Added some convenience amenities in Transformation tab: Subject field is now auto-filled when user selects text. Namespaces are taken into account to create full URIs if hashed. Linkify.js is used to provide a target representation inside a div with actual links for URIs.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -350,17 +350,17 @@ button.closeLike {
 }
 
 .affix {
-      top:0;
-      width: 99%;
-      z-index: 2 !important;
-      background-color: white;
-    
-  }
+    top:0;
+    width: 99%;
+    z-index: 2 !important;
+    background-color: white;
 
-  .modal-content {
-      z-index: 1;
-  }
-  
+}
+
+.modal-content {
+    z-index: 1;
+}
+
 .actionsToolbar {
     padding: 0px;
     border: 1px solid #ddd;
@@ -822,28 +822,38 @@ thead.selected+tbody>tr.empty {
     padding-right: 20px !important;
 }
 .mCS_y_hidden>.mCSB_container{
-     padding-right: 0px !important;
+    padding-right: 0px !important;
 }
 
 /* Context menu styles*/
- /* menu header via data attribute */
-    .data-title:before {
-        content: attr(data-menutitle);
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        background: #DDD;
-        padding: 2px;
+/* menu header via data attribute */
+.data-title:before {
+    content: attr(data-menutitle);
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    background: #DDD;
+    padding: 2px;
 
-        font-family: Verdana, Arial, Helvetica, sans-serif;
-        font-size: 11px;
-        font-weight: bold;
-    }
-    .data-title :first-child {
-        margin-top: 20px;
-    }
-    .rangeTemplate {
-        display: none;
-    }
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    font-weight: bold;
+}
+.data-title :first-child {
+    margin-top: 20px;
+}
+.rangeTemplate {
+    display: none;
+}
+
+#engineResult2 {
+    word-wrap: break-word;
+    height: 300px;
+    margin: 0 auto;
+    overflow: auto;
+    padding: 2px;
+    text-align: justify;
+    background: transparent;
+}
